# rustic-mod-manager

./: .gitignore  Cargo.toml  PKGBUILD  README.md  shell.nix
interactions/: Cargo.toml
interactions/src/: fomod.rs  lib.rs
src/: app.rs  instance.rs  main.rs
src/assets/: nxm_handler.desktop  rsmm.desktop
src/gui/: app.rs  mod.rs  style.rs
src/interactions_api/: deploy.rs  fomod.rs  gui_app.rs  instance.rs  mod.rs  nexus.rs  steam.rs
style/: Cargo.toml
style/src/: lib.rs
