[package]
name = "rustic-mod-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.14.0"
image = "0.25.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sevenz-rust2 = "0.20.1"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
style = { version = "0.1.0", path = "style" }
interactions = { version = "0.1.0", path = "interactions" }
